--- a/src/index.html
+++ b/src/index.html
@@ -1,61 +1,54 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
-  <link rel="stylesheet" href="main.css">
-  <title>HTML Portfolio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300|Source+Serif+Pro" rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
+    <title>HTML Portfolio</title>
 </head>
-
 <body>
-
-  <div class="header">
-    <h1>Sergio Cruz</h1>
-    <h2>Application Developer</h2>
-
-    <ul class="nav">
-      <li><a href="index.html" class="active">Home</a></li>
-      <li><a href="about.html">About</a></li>
-    </ul>
-  </div>
-
-  <div class="tagline">
-    <div class="content-wrapper">
-      <h3>A bit more about me</h3>
-      <p>Hey I am Sergio, I work for <a target="_blank" href="https://www.codeschool.com">Code School</a> and I love writing JavaScript!</p>
-    </div>
-  </div>
-
-
-  <div class="skills">
-    <div class="content-wrapper">
-      <h3>Skills</h3>
-      <p>Here are some of the technologies I enjoy writing day-to-day:</p>
-      <ul>
-        <li>HTML &amp; CSS</li>
-        <li>Node.js</li>
-        <li>React</li>
-        <li>Angular 2</li>
-        <li>Webpack</li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="contact">
-    <div class="content-wrapper">
-      <h3>How to contact me</h3>
-      <p>The easiest way to contact me is via twitter: <a target="_blank" href="https://twitter.com/hashtagserg">@hashtagserg</a></p>
-    </div>
-  </div>
-
-  <div class="footer">
-    <div class="content-wrapper">
-      <h3>Credits</h3>
-      <p>This portfolio was created using <a href='https://www.codeschool.com'>Code School's</a> <a href='https://github.com/codeschool/SemanticHTMLPortfolioProject'>Semantic HTML Portfolio Project</a> template.</p>
-    </div>
-  </div>
-
+    <header>
+        <h1>Joe Diliegghio</h1>
+        <h2>Systems Test Analyst</h2>
+        <nav class="nav">
+            <ul>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="tagline">
+            <div class="content-wrapper">
+                <h3>A little about me...</h3>
+                <p>Hi I am Joe. I'm currently learning development through <a target="_blank" href="https://www.codeschool.com">Code School</a> &amp; <a target="_blank" href="https://www.pluralsight.com">Plural Sight</a> to futher enhance my abilities 
+                within Quality Assurance. When I'm not testing, or studying DEV, I enjoy learning about the principles of design, and fine arts.</p>
+            </div>
+        </section>
+        <section class="skills">
+            <div class="content-wrapper">
+                <h3>Skills</h3>
+                <p>So far I've covered the following:</p>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS3</li>
+                    <li>Elements of Design</li>
+                </ul>
+            </div>
+        </section>
+        <section class="contact">
+            <div class="content-wrapper">
+                <h3>Follow Me</h3>
+                <p>Follow me on twitter <a target="_blank" href="https://twitter.com/jdiliegghio">&#64;jdiliegghio</a></p>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="content-wrapper">
+            <h3>Credits</h3>
+            <p>This portfolio was created following <a target="_blank" href='https://www.codeschool.com'>Code School's</a> <a target="_blank" href='https://github.com/codeschool/SemanticHTMLPortfolioProject'>Semantic HTML Portfolio Project</a> template.</p>
+        </div>
+    </footer>
 </body>
-
 </html>
