really_the_final_edit
nav class and other class updates

--- a/src/about.html
+++ b/src/about.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Joe Diliegghio</h1>
         <h2>Systems Test Analyst</h2>
-        <nav class="nav">
+        <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html" class="active">About</a></li>
@@ -19,7 +19,7 @@
         </nav>
     </header>
     <main>
-        <section class="about">
+        <section class="tagline">
             <div class="content-wrapper">
                 <h3>Summary</h3>
                 <p>Although I've been working in IT since 2010, I've only been a member of QA for the past year and a half. Thus far it has been a great experience and offered 
@@ -28,7 +28,7 @@
                 </p>
             </div>
         </section>
-        <section class="testskills">
+        <section class="skills">
             <div class="content-wrapper">
                 <h3>QA Skills</h3>
                 <p>Proficient in the following:</p>
