--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Joe Diliegghio</h1>
         <h2>Systems Test Analyst</h2>
-        <nav class="nav">
+        <nav>
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About</a></li>
